# IFEM-ElectroMagnetics

./: CMakeLists.txt  CurlEquation.C  CurlEquation.h  ElectroMagneticProperties.C  ElectroMagneticProperties.h  Maxwell.C  Maxwell.h  SIMElectroMagnetics.h  main_ElectroMagnetics.C
